# actuator_bridge

./: CMakeLists.txt  README.md  package.xml
config/: example.bk.yaml  example.yaml
include/actuator_bridge/: bridge.h  driver_base.h  driver_registry.h  types.h
include/actuator_bridge/drivers/: dm_driver.h  robstride_driver.h
launch/: demo.launch  socketcan_auto.launch
scripts/: generate_socketcan_launch.py  socketcan.launch  socketcan_spawner.py
src/: actuator_bridge_node.cpp  bridge.cpp  driver_registry.cpp
src/drivers/: dm_driver.cpp  robstride_driver.cpp
